--- a/guide.html
+++ b/guide.html
@@ -6,9 +6,9 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220605155139">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220605161902">
 	<!-- Box icons CND Link-->
-	<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css?_v=20220605155139' rel='stylesheet'>
+	<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css?_v=20220605161902' rel='stylesheet'>
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,22 +21,8 @@
 				<div class="header__content">
 					<nav class="header__menu">
 						<ul class="header__menu-list">
-							<li class="header__menu-item"><a href="../home.html">Привет</a></li>
-							<li class="header__menu-item"><a href="../guide.html">Гайд</a>
-								<ul class="header__menu-item-guide">
-									<li class="header__menu-item-guide-item"><a href="">Предварительная установка</a></li>
-									<li class="header__menu-item-guide-item"><a href="">Предпосылки</a></li>
-									<li class="header__menu-item-guide-item"><a href="">Установка модов - Часть 1</a></li>
-									<li class="header__menu-item-guide-item"><a href="">Установка модов - Часть 2</a></li>
-									<li class="header__menu-item-guide-item"><a href="">Установка модов - Часть 3</a></li>
-									<li class="header__menu-item-guide-item"><a href="">Установка модов - Часть 4</a></li>
-									<li class="header__menu-item-guide-item"><a href="">Установка модов - Часть 5</a></li>
-									<li class="header__menu-item-guide-item"><a href="">Установка модов - Часть 6</a></li>
-									<li class="header__menu-item-guide-item"><a href="">Объединение модов</a></li>
-									<li class="header__menu-item-guide-item"><a href="">Финишная прямая</a></li>
-									<li class="header__menu-item-guide-item"><a href="">Настройка MCM</a></li>
-								</ul>
-							</li>
+							<li class="header__menu-item"><a href="../UltimateAE/home.html">Привет</a></li>
+							<li class="header__menu-item"><a href="../UltimateAE/guide.html">Гайд</a></li>
 							<li class="header__menu-item"><a href="">Изменения</a></li>
 							<li class="header__menu-item"><a href="">FAQs</a></li>
 							<li class="header__menu-item"><a href="">Донат</a></li>
@@ -53,8 +39,8 @@
 					<span class="logo__name">Закрыть</span>
 				</button>
 				<ul class="nav-links">
-					<li class="nav-links__item"><a href="../guide.html">Начало</a></li>
-					<li class="nav-links__item"><a href="../preinstallation.html">Предварительная установка</a></li>
+					<li class="nav-links__item"><a href="../UltimateAE/guide.html">Начало</a></li>
+					<li class="nav-links__item"><a href="../UltimateAE/preinstallation.html">Предварительная установка</a></li>
 					<li class="nav-links__item"><a href="">Установка модов - Часть 1</a></li>
 					<li class="nav-links__item"><a href="">Установка модов - Часть 2</a></li>
 					<li class="nav-links__item"><a href="">Установка модов - Часть 3</a></li>
@@ -127,7 +113,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220605155139"></script>
+	<script src="js/app.min.js?_v=20220605161902"></script>
 </body>
 
 </html>
