--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<ol class="rootpage__list">
 			<li><a target="_blank" href="home.html">Привет</a></li>
 			<li><a target="_blank" href="guide.html">Гайд</a></li>
-			<li><a target="_blank" href="guide.html">Предварительная установка</a></li>
+			<li><a target="_blank" href="preinstallation.html">Предварительная установка</a></li>
 		</ol>
 		<h2>Попапы:</h2>
 		<ol class="rootpage__list">
