--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<li><a target="_blank" href="home.html">Привет</a></li>
 			<li><a target="_blank" href="guide.html">Гайд</a></li>
 			<li><a target="_blank" href="preinstallation.html">Предварительная установка</a></li>
+			<li><a target="_blank" href="part1.html">Установка модов - Часть 1</a></li>
 		</ol>
 		<h2>Попапы:</h2>
 		<ol class="rootpage__list">
