--- a/guide.html
+++ b/guide.html
@@ -6,9 +6,9 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220605161902">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220605215117">
 	<!-- Box icons CND Link-->
-	<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css?_v=20220605161902' rel='stylesheet'>
+	<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css?_v=20220605215117' rel='stylesheet'>
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,7 +41,7 @@
 				<ul class="nav-links">
 					<li class="nav-links__item"><a href="../UltimateAE/guide.html">Начало</a></li>
 					<li class="nav-links__item"><a href="../UltimateAE/preinstallation.html">Предварительная установка</a></li>
-					<li class="nav-links__item"><a href="">Установка модов - Часть 1</a></li>
+					<li class="nav-links__item"><a href="../UltimateAE/part1.html">Установка модов - Часть 1</a></li>
 					<li class="nav-links__item"><a href="">Установка модов - Часть 2</a></li>
 					<li class="nav-links__item"><a href="">Установка модов - Часть 3</a></li>
 					<li class="nav-links__item"><a href="">Установка модов - Часть 4</a></li>
@@ -113,7 +113,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220605161902"></script>
+	<script src="js/app.min.js?_v=20220605215117"></script>
 </body>
 
 </html>
