--- a/part1.html
+++ b/part1.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-	<title>Предварительная установка</title>
+	<title>Установка модов - Часть 1</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
